# polkadot-stack-template

./: .pre-commit-config.yaml  .prettierrc  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  INSTALL.md  README.md  TOOLS.md  docker-compose.yml  flake.nix
.github/workflows/: ci-audit.yml  ci-pvm.yml  deploy-frontend.yml
blockchain/: README.md  chain_spec.json  zombienet.toml
blockchain/pallets/template/: Cargo.toml  README.md
blockchain/pallets/template/src/: benchmarking.rs  lib.rs  tests.rs
blockchain/runtime/: Cargo.toml  README.md
blockchain/runtime/src/: genesis_config_presets.rs  lib.rs  tests.rs
blockchain/runtime/src/configs/: mod.rs  xcm_config.rs
blockchain/runtime/src/weights/: block_weights.rs  extrinsic_weights.rs  paritydb_weights.rs  rocksdb_weights.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: contract.rs  mod.rs  pallet.rs  prove.rs
contracts/: README.md
contracts/evm/: package.json
contracts/pvm/: package.json
contracts/pvm/scripts/: deploy.ts
docs/: DEPLOYMENT.md  INSTALL.md  TOOLS.md
nix/: devshell.nix  formatting.nix  git-hooks.nix  lib.nix
nix/pkgs/: default.nix  eth-rpc.nix  psvm.nix
scripts/: README.md  common.sh  download-sdk-binaries.sh  start-all.sh  start-dev-with-contracts.sh  start-dev.sh  start-frontend.sh  start-local.sh  test-statement-store-smoke.sh  test-zombienet.sh
web/: package-lock.json  package.json
web/.papi/descriptors/: generated.json
web/.papi/metadata/: stack_template.scale
web/src/: App.tsx
web/src/components/: ContractProofOfExistencePage.tsx  FileDropZone.tsx
web/src/config/: evm.ts
web/src/pages/: AccountsPage.tsx  EvmContractPage.tsx  HomePage.tsx  PalletPage.tsx  PvmContractPage.tsx  StatementStorePage.tsx
web/src/utils/: hash.ts
