[workspace]
resolver = "2"
members = ["blockchain/runtime", "blockchain/pallets/template", "cli"]

[workspace.package]
license = "MIT"
authors = ["Polkadot Stack Template Contributors"]
homepage = "https://github.com/parity-Asia/polkadot-stack-template"
repository = "https://github.com/parity-Asia/polkadot-stack-template.git"
edition = "2021"

[workspace.dependencies]
# Local crates
pallet-template = { path = "./blockchain/pallets/template", default-features = false }

# Common dependencies
codec = { version = "3.7.4", default-features = false, package = "parity-scale-codec" }
docify = { version = "0.2.9" }
hex-literal = { version = "0.4.1", default-features = false }
log = { version = "0.4.22", default-features = false }
scale-info = { version = "2.11.6", default-features = false }
serde = { version = "1.0.214", default-features = false }
serde_json = { version = "1.0.132", default-features = false }
smallvec = { version = "1.13.1", default-features = false }

# Polkadot SDK
polkadot-sdk = { version = "2603.0.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.26.0", default-features = false }
substrate-wasm-builder = { version = "32.0.0" }

# FRAME (experimental umbrella crate - used by pallets)
frame = { version = "0.15.0", default-features = false, package = "polkadot-sdk-frame" }

# Used by pallet dev-deps
sp-core = { version = "40.0.0" }
sp-io = { version = "45.0.0", default-features = false }
sp-statement-store = { version = "25.0.0" }

# CLI dependencies
subxt = { version = "0.38" }
subxt-signer = { version = "0.38", features = ["sr25519", "subxt"] }
tokio = { version = "1", features = ["full"] }
alloy = { version = "1.8", features = [
  "contract",
  "provider-http",
  "signer-local",
] }

# For a full Polkadot SDK line upgrade, prefer `psvm -v 1.22.0` to rewrite the
# workspace crate pins together for stable2603 instead of carrying ad-hoc
# overrides here.

[profile.release]
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true
